# jsfucky

./: Cargo.toml  makefile
src/: encode.rs  main.rs
